# codex_image

./: CHANGELOG.md  Cargo.toml  LICENSE  README.ko.md  README.md
.github/workflows/: release.yml
docs/: advanced-reference.md  skill-paths.md  uat-live-smoke.md
scripts/: install-latest.ps1  install-latest.sh  uat-live-smoke.sh  verify-local-install.sh
src/: cli.rs  codex.rs  config.rs  diagnostics.rs  lib.rs  main.rs  openai.rs  output.rs  skill_install_ux.rs  skill_installer.rs  skills.rs  updater.rs
src/auth/: device.rs  lifecycle.rs  mod.rs  oauth.rs  state.rs  store.rs
src/templates/: codex-image-skill.md
tests/: api_base_url.rs  auth_lifecycle.rs  auth_store.rs  binary_update.rs  binary_update_cli.rs  cli_help.rs  device_code.rs  diagnostics.rs  generate.rs  install_uat_docs.rs  login_device_code.rs  openai.rs  output.rs  release_workflow.rs  skill_final_integration.rs  skill_install_cli.rs  skill_install_ux.rs  skill_installer.rs  skill_path_docs.rs  skill_paths.rs  skill_update_cli.rs  status_logout.rs
