[package]
name = "codex-image"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_image"
path = "src/lib.rs"

[[bin]]
name = "codex-image"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
wiremock = "0.6"
