[package]
name = "codex-image"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_image"
path = "src/lib.rs"

[[bin]]
name = "codex-image"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
